--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,2 +1,16 @@
-//= include /home/shim/Documents/foreman/foreman/app/assets/stylesheets/login.scss
-//= include login2.scss
+//=include_foreman stylesheets/login.scss
+
+@import "mixin";
+@import "colors";
+
+.login-page #brand img {
+  display: block;
+  height: 184px;
+  margin: 0;
+  max-width: 100%;
+}
+.login-page {
+  background: $primary_color;
+  background-size: auto;
+  color: #fff;
+}
